fix: replaced overflow-y: scroll to auto

--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -27,7 +27,7 @@
 
       height: 100%;
       width: 100%;
-      overflow-y: scroll;
+      overflow-y: auto;
     }
   }
 }
